--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux": "^5.0.1",
     "sass": "^1.69.7",
     "web-vitals": "^2.1.4"
